--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "temporalio==1.21.1",
     "aiohttp==3.13.3",
     "pydantic==2.12.4",
+    "google-genai==1.63.0",
+    "pypdf==6.6.0",
+    "fastapi==0.111.0",
+    "uvicorn==0.30.1",
 ]
 
 [dependency-groups]
